--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_menu.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_menu.xml
@@ -510,29 +510,32 @@
                     android:background="@drawable/line_menu"/>
             </RelativeLayout>
 
+
             <RelativeLayout
-                android:id="@+id/termsConditionRl"
+                android:id="@+id/relativeLayoutRateCard"
                 android:layout_width="match_parent"
                 android:layout_height="84px"
                 android:background="@drawable/menu_item_selector"
-                android:splitMotionEvents="false">
+                android:splitMotionEvents="false"
+                android:visibility="visible">
 
                 <TextView
-                    android:id="@+id/termsConditionText"
+                    android:id="@+id/textViewRateCard"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="42px"
-                    android:text="@string/terms"
+                    android:text="@string/rate_card"
                     android:textColor="@color/white"
                     android:textSize="34px"/>
 
                 <ImageView
                     android:layout_width="match_parent"
-                    android:layout_height="3px"
+                    android:layout_height="4px"
                     android:layout_alignParentBottom="true"
                     android:background="@drawable/line_menu"/>
             </RelativeLayout>
+
 
             <RelativeLayout
                 android:id="@+id/languagePrefrencesRl"
@@ -555,6 +558,30 @@
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="4px"
+                    android:layout_alignParentBottom="true"
+                    android:background="@drawable/line_menu"/>
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/termsConditionRl"
+                android:layout_width="match_parent"
+                android:layout_height="84px"
+                android:background="@drawable/menu_item_selector"
+                android:splitMotionEvents="false">
+
+                <TextView
+                    android:id="@+id/termsConditionText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="42px"
+                    android:text="@string/terms"
+                    android:textColor="@color/white"
+                    android:textSize="34px"/>
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="3px"
                     android:layout_alignParentBottom="true"
                     android:background="@drawable/line_menu"/>
             </RelativeLayout>
