feature_distance_fix: UI fixes

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
@@ -494,6 +494,17 @@
         android:tag="mwar"
         />
 
+    <!--<Button-->
+        <!--android:id="@+id/distanceReset2"-->
+        <!--android:layout_width="80px"-->
+        <!--android:layout_height="80px"-->
+        <!--android:layout_above="@+id/linearLayoutStartEnd"-->
+        <!--android:layout_marginBottom="20px"-->
+        <!--android:layout_marginLeft="160px"-->
+        <!--android:background="@drawable/new_my_loc_button"-->
+        <!--android:tag="mwar"-->
+        <!--/>-->
+
     <Button
         android:id="@+id/buttonDriverNavigation"
         android:layout_width="240px"
