beta_new: UI fixes

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_documents.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_documents.xml
@@ -79,7 +79,7 @@
         <RelativeLayout
             android:id="@+id/relativeLayoutImageStatus"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="182px"
             android:layout_gravity="center_vertical"
             android:layout_marginBottom="24px"
             android:layout_marginTop="12px"
@@ -88,12 +88,12 @@
             <RelativeLayout
                 android:id="@+id/addImageLayout"
                 android:layout_width="160px"
-                android:layout_height="160px"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="20px"
                 android:layout_marginTop="12px"
                 android:background="@drawable/background_white_rounded_orange_bordered"
                 android:orientation="vertical"
-                android:padding="3px">
+                android:padding="0px">
 
                 <ImageView
                     android:id="@+id/image_icon"
@@ -116,8 +116,9 @@
 
                 <ImageView
                     android:id="@+id/setCapturedImage"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"/>
+                    android:layout_width="160px"
+                    android:layout_height="160px"
+                    android:tag="mwar"/>
 
 
             </RelativeLayout>
@@ -125,13 +126,12 @@
             <RelativeLayout
                 android:id="@+id/addImageLayout2"
                 android:layout_width="160px"
-                android:layout_height="160px"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="30px"
                 android:layout_marginTop="12px"
                 android:layout_toRightOf="@+id/addImageLayout"
                 android:background="@drawable/background_white_rounded_orange_bordered"
-                android:orientation="vertical"
-                android:padding="3px">
+                android:tag="mwar">
 
                 <ImageView
                     android:id="@+id/image_icon2"
@@ -139,6 +139,7 @@
                     android:layout_height="60px"
                     android:layout_marginLeft="50px"
                     android:layout_marginTop="24px"
+                    android:visibility="visible"
                     android:background="@drawable/image_icon"/>
 
                 <TextView
@@ -149,13 +150,15 @@
                     android:layout_marginLeft="28px"
                     android:layout_marginTop="12px"
                     android:text="@string/add_image"
+                    android:visibility="visible"
                     android:textColor="@color/new_orange"
                     android:textSize="20px"/>
 
                 <ImageView
                     android:id="@+id/setCapturedImage2"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"/>
+                    android:layout_width="160px"
+                    android:layout_height="160px"
+                    android:tag="mwar"/>
 
             </RelativeLayout>
 
