--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_rate_card.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_rate_card.xml
@@ -75,7 +75,7 @@
             android:layout_marginRight="50px"
             android:gravity="center_vertical">
 
-            <TextView
+            <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
                 android:id="@+id/textViewPickupCharges"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -100,7 +100,7 @@
                     android:textColor="@color/new_orange"
                     android:textSize="24px"/>
 
-                <TextView
+                <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
                     android:id="@+id/textViewPickupChargesCond"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -161,7 +161,7 @@
                 android:layout_height="116px"
                 android:orientation="horizontal">
 
-                <TextView
+                <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
                     android:id="@+id/textViewBaseFare"
                     android:layout_width="0px"
                     android:layout_height="wrap_content"
@@ -301,7 +301,7 @@
                 android:layout_height="100px"
                 android:orientation="horizontal">
 
-                <TextView
+                <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
                     android:id="@+id/textViewDtoC"
                     android:layout_width="0px"
                     android:layout_height="wrap_content"
@@ -319,7 +319,7 @@
                     android:layout_gravity="bottom"
                     android:src="@drawable/ring_orange_dark"/>
 
-                <TextView
+                <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
                     android:id="@+id/textViewDtoD"
                     android:layout_width="0px"
                     android:layout_height="wrap_content"
@@ -379,11 +379,11 @@
             android:layout_marginLeft="50px"
             android:layout_marginRight="50px"
             android:gravity="center_vertical"
-            android:visibility="gone">
+            android:visibility="visible">
 
             <TextView
                 android:id="@+id/textViewDriverReferral"
-                android:layout_width="wrap_content"
+                android:layout_width="480px"
                 android:layout_height="wrap_content"
                 android:text="@string/pickup_charges"
                 android:textColor="@color/black"
