--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_rate_card.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_rate_card.xml
@@ -179,16 +179,37 @@
                     android:layout_gravity="bottom"
                     android:src="@drawable/ring_orange_dark"/>
 
-                <TextView
-                    android:id="@+id/textViewDistancePKm"
+                <RelativeLayout
                     android:layout_width="0px"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="@string/distance_per_km"
-                    android:textColor="@color/black"
-                    android:textSize="34px"/>
+                    android:gravity="center">
+
+                    <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
+                        android:id="@+id/textViewDistancePKm"
+                        android:layout_width="230px"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="@string/distance"
+                        android:textColor="@color/black"
+                        android:textSize="34px"/>
+
+                    <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
+                        android:id="@+id/textViewPKm"
+                        android:layout_width="230px"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/textViewDistancePKm"
+                        android:layout_gravity="center_vertical"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="@string/per_km"
+                        android:textColor="@color/black"
+                        android:textSize="34px"/>
+
+                </RelativeLayout>
 
                 <ImageView
                     android:id="@+id/imageViewHorizontal4"
@@ -197,16 +218,38 @@
                     android:layout_gravity="bottom"
                     android:src="@drawable/ring_orange_dark"/>
 
-                <TextView
-                    android:id="@+id/textViewTimePKm"
+                <RelativeLayout
                     android:layout_width="0px"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="@string/time_per_min"
-                    android:textColor="@color/black"
-                    android:textSize="34px"/>
+                    android:gravity="center">
+
+                    <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
+                        android:id="@+id/textViewTimePKm"
+                        android:layout_width="230px"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="@string/time"
+                        android:textColor="@color/black"
+                        android:textSize="34px"/>
+
+
+                    <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
+                        android:id="@+id/textViewPm"
+                        android:layout_width="230px"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/textViewTimePKm"
+                        android:layout_gravity="center_vertical"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="@string/per_km"
+                        android:textColor="@color/black"
+                        android:textSize="34px"/>
+
+                </RelativeLayout>
 
             </LinearLayout>
 
@@ -228,7 +271,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:layout_marginLeft="80px"
+                    android:layout_marginLeft="70px"
                     android:text="00"
                     android:textColor="@color/black"
                     android:textSize="34px"/>
@@ -379,7 +422,7 @@
             android:layout_marginLeft="50px"
             android:layout_marginRight="50px"
             android:gravity="center_vertical"
-            android:visibility="visible">
+            android:visibility="gone">
 
             <TextView
                 android:id="@+id/textViewDriverReferral"
