--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_invoice_history.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_invoice_history.xml
@@ -46,16 +46,15 @@
                         />
 
 
-                    <TextView
+                    <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
                         android:id="@+id/textViewStatusString"
-                        android:layout_width="wrap_content"
+                        android:layout_width="350px"
                         android:layout_height="wrap_content"
                         android:layout_toRightOf="@+id/statusImage"
-                        android:singleLine="true"
                         android:layout_marginLeft="10px"
                         android:text="@string/outstanding_amount"
                         android:textColor="@color/bg_grey_opaque"
-                        android:textSize="34px"/>
+                        android:textSize="30px"/>
 
                 </RelativeLayout>
 
@@ -69,12 +68,12 @@
                     android:singleLine="true"
                     android:text="Invoice ID: 1111"
                     android:textColor="@color/bg_grey_opaque"
-                    android:textSize="34px"/>
+                    android:textSize="30px"/>
 
 
                 <TextView
                     android:id="@+id/textViewInvoiceFare"
-                    android:layout_width="264px"
+                    android:layout_width="260px"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:layout_marginRight="20px"
@@ -105,7 +104,7 @@
                     android:singleLine="true"
                     android:text="@string/generated_on"
                     android:textColor="@color/black"
-                    android:textSize="34px"
+                    android:textSize="30px"
                     />
 
 
@@ -145,7 +144,7 @@
                         android:singleLine="true"
                         android:text="@string/from"
                         android:textColor="@color/black"
-                        android:textSize="34px"
+                        android:textSize="30px"
                         />
 
                     <!--<ImageView-->
@@ -191,7 +190,7 @@
                         android:singleLine="true"
                         android:text="@string/to"
                         android:textColor="@color/black"
-                        android:textSize="34px"
+                        android:textSize="30px"
                         />
 
                     <!--<ImageView-->
