--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_splash_new.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_splash_new.xml
@@ -127,6 +127,18 @@
 
             <Button
                 android:id="@+id/buttonRegister"
+                android:text="@string/self_enroled"
+                android:textColor="@color/new_orange"
+                android:layout_width="636px"
+                android:layout_height="112px"
+                android:layout_marginTop="24px"
+                android:background="@drawable/background_white_rounded_bordered"
+                android:textSize="@dimen/button_text_size"
+                android:visibility="visible"
+                />
+
+            <Button
+                android:id="@+id/buttonRegisterTookan"
                 android:text="@string/register"
                 android:textColor="@color/new_orange"
                 android:layout_width="636px"
@@ -232,7 +244,6 @@
             </LinearLayout>
 
         </LinearLayout>
-
 
     </RelativeLayout>
 
