old_registeration_merge: edit image code added

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_documents.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_documents.xml
@@ -92,18 +92,18 @@
         <RelativeLayout
             android:id="@+id/relativeLayoutImageStatus"
             android:layout_width="match_parent"
-            android:layout_height="182px"
+            android:layout_height="186px"
             android:layout_gravity="center_vertical"
             android:layout_marginBottom="24px"
             android:layout_marginTop="12px"
-            android:visibility="gone">
+            android:visibility="visible">
 
             <RelativeLayout
                 android:id="@+id/addImageLayout"
                 android:layout_width="160px"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20px"
-                android:layout_marginTop="12px"
+                android:layout_marginTop="18px"
                 android:background="@drawable/background_white_rounded_orange_bordered"
                 android:orientation="vertical"
                 android:padding="0px">
@@ -133,15 +133,23 @@
                     android:layout_height="160px"
                     android:tag="mwar"/>
 
-
             </RelativeLayout>
+
+            <ImageView
+                android:id="@+id/deleteImage1"
+                android:layout_width="48px"
+                android:layout_height="48px"
+                android:src="@drawable/orange_cross"
+                android:layout_marginLeft="160px"
+                android:visibility="gone"
+                android:tag="mwar"/>
 
             <RelativeLayout
                 android:id="@+id/addImageLayout2"
                 android:layout_width="160px"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="30px"
-                android:layout_marginTop="12px"
+                android:layout_marginLeft="64px"
+                android:layout_marginTop="16px"
                 android:layout_toRightOf="@+id/addImageLayout"
                 android:background="@drawable/background_white_rounded_orange_bordered"
                 android:tag="mwar">
@@ -174,6 +182,15 @@
                     android:tag="mwar"/>
 
             </RelativeLayout>
+
+            <ImageView
+                android:id="@+id/deleteImage2"
+                android:layout_width="48px"
+                android:layout_height="48px"
+                android:src="@drawable/orange_cross"
+                android:layout_marginLeft="384px"
+                android:visibility="gone"
+                android:tag="mwar"/>
 
             <RelativeLayout
                 android:layout_width="120px"
