old_registeration_merge:edit image on approved

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_splash_new.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_splash_new.xml
@@ -127,7 +127,7 @@
 
             <Button
                 android:id="@+id/buttonRegister"
-                android:text="@string/self_enroled"
+                android:text="@string/register"
                 android:textColor="@color/new_orange"
                 android:layout_width="636px"
                 android:layout_height="112px"
@@ -139,7 +139,7 @@
 
             <Button
                 android:id="@+id/buttonRegisterTookan"
-                android:text="@string/register"
+                android:text="@string/register_via_agent"
                 android:textColor="@color/new_orange"
                 android:layout_width="636px"
                 android:layout_height="112px"
