--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_register.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_register.xml
@@ -137,7 +137,7 @@
                     android:layout_toRightOf="@+id/imageViewPhone"
                     android:background="@drawable/transparent"
                     android:hint="@string/phone_number"
-                    android:inputType="phone"
+                    android:inputType="number"
                     android:maxLength="10"
                     android:paddingLeft="15px"
                     android:paddingRight="20px"
