--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_initial.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_initial.xml
@@ -8,16 +8,55 @@
     android:visibility="gone"
     android:layout_marginTop="@dimen/top_bar_height"
     >
+    
+    <RelativeLayout
+        android:id="@+id/relativeLayoutLastRideEarning"
+        android:layout_width="match_parent"
+        android:layout_height="135px"
+        android:layout_marginTop="40px"
+        android:layout_marginLeft="15px"
+        android:layout_marginRight="15px"
+        android:gravity="center_vertical"
+        android:background="@drawable/background_white_rounded_orange_bordered">
+
+        <TextView
+            android:id="@+id/textViewDriverEarningOnScreen"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/last_trip_earning"
+            android:layout_marginLeft="32px"
+            android:textSize="28px"/>
+
+        <TextView
+            android:id="@+id/textViewDriverEarningOnScreenDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/textViewDriverEarningOnScreen"
+            android:text="@string/NA"
+            android:layout_marginLeft="32px"
+            android:textSize="24px"/>
+
+        <TextView
+            android:id="@+id/textViewDriverEarningOnScreenValue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="26px"
+            android:text="@string/NA"
+            android:textColor="@color/new_orange"
+            android:textSize="44px"/>
+
+    </RelativeLayout>
 
     <Button
         android:id="@+id/driverInformationBtn"
         android:layout_width="80px"
         android:layout_height="80px"
-        android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
-        android:layout_marginTop="60px"
+        android:layout_below="@+id/relativeLayoutLastRideEarning"
+        android:layout_marginTop="24px"
         android:layout_marginRight="36px"
-        android:background="@drawable/info_icon_black"
+        android:background="@drawable/icon_i"
         android:tag="mwar"/>
 
     <Button
@@ -41,5 +80,6 @@
         android:text="@string/jugnoo_off"
         android:textColor="@color/black"
         android:textSize="44px"
+        android:visibility="visible"
         />
 </RelativeLayout>
