--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_register.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_register.xml
@@ -48,8 +48,8 @@
 
         <ImageView
             android:id="@+id/imageViewJugnooLogo"
-            android:layout_width="300px"
-            android:layout_height="240px"
+            android:layout_width="225px"
+            android:layout_height="180px"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="5px"
             android:background="@drawable/jugnoo_white_logo"
@@ -71,7 +71,7 @@
 
             <RelativeLayout
                 android:layout_width="630px"
-                android:layout_height="120px"
+                android:layout_height="115px"
                 android:gravity="center_vertical"
                 >
 
@@ -116,7 +116,7 @@
 
             <RelativeLayout
                 android:layout_width="630px"
-                android:layout_height="120px"
+                android:layout_height="115px"
                 android:gravity="center_vertical"
                 >
 
@@ -160,7 +160,51 @@
 
             <RelativeLayout
                 android:layout_width="630px"
-                android:layout_height="120px"
+                android:layout_height="115px"
+                android:gravity="center_vertical"
+                >
+
+                <ImageView
+                    android:id="@+id/imageViewReferralCode"
+                    android:layout_width="40px"
+                    android:layout_height="40px"
+                    android:layout_alignParentLeft="true"
+                    android:layout_marginRight="48px"
+                    android:layout_marginTop="22px"
+                    android:background="@drawable/ic_email"/>
+
+
+                <EditText
+                    android:id="@+id/referralCodeEt"
+                    android:layout_width="525px"
+                    android:layout_height="90px"
+                    android:layout_toRightOf="@+id/imageViewReferralCode"
+                    android:background="@drawable/transparent"
+                    android:hint="@string/referral_code"
+                    android:maxLength="10"
+                    android:inputType="text"
+                    android:paddingLeft="15px"
+                    android:paddingRight="20px"
+                    android:singleLine="true"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/grey_black_light"
+                    android:textSize="34px"/>
+
+                <ImageView
+                    android:id="@+id/imageViewreferralCodeLine"
+                    android:layout_width="525px"
+                    android:layout_height="2px"
+                    android:layout_alignParentLeft="true"
+                    android:layout_below="@+id/referralCodeEt"
+                    android:layout_marginLeft="72px"
+                    android:background="@color/black"/>
+
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="630px"
+                android:layout_height="115px"
                 android:gravity="center_vertical">
 
                 <ImageView
@@ -212,7 +256,7 @@
 
             <RelativeLayout
                 android:layout_width="630px"
-                android:layout_height="120px"
+                android:layout_height="115px"
                 android:gravity="center_vertical"
                 >
 
@@ -265,7 +309,7 @@
 
             <RelativeLayout
                 android:layout_width="630px"
-                android:layout_height="110px"
+                android:layout_height="105px"
                 android:gravity="center_vertical"
                 >
 
@@ -314,6 +358,7 @@
 
 
             </RelativeLayout>
+
 
 
             <!--<LinearLayout-->
