--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_rate_card.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_rate_card.xml
@@ -310,6 +310,7 @@
                 android:layout_centerVertical="true"
                 android:text="@string/diffrential_pricing_rate"
                 android:layout_marginLeft="34px"
+                android:visibility="gone"
                 android:textColor="@color/grey_dark_less"
                 android:textSize="24px"
                 />
