--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_self_audit_custom_camera.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_self_audit_custom_camera.xml
@@ -1,30 +1,139 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:id="@+id/linearLayoutRoot"
-              android:orientation="vertical"
+<LinearLayout android:id="@+id/linearLayoutRoot"
+              xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
-              android:layout_height="1134px">
+              android:layout_height="1134px"
+              android:orientation="vertical">
 
     <RelativeLayout
         android:id="@+id/topRl"
         android:layout_width="match_parent"
-        android:layout_height="90px"
+        android:layout_height="145px"
         android:background="@color/menu_black"
-        android:splitMotionEvents="false" >
+        android:splitMotionEvents="false">
+
+
+        <LinearLayout
+            android:id="@+id/relativeLayoutProgressBar"
+            android:layout_width="388px"
+            android:layout_height="29px"
+            android:layout_centerHorizontal="true"
+            android:layout_marginLeft="14px"
+            android:layout_marginTop="18px"
+            android:orientation="horizontal"
+            android:background="@drawable/self_audit_progress_bar">
+
+            <ImageView
+                android:id="@+id/imageViewCapturedImg1Progress"
+                android:layout_marginTop="1.5px"
+                android:layout_marginLeft="1.5px"
+                android:layout_width="24px"
+                android:layout_height="24px"
+                android:src="@drawable/green_circle"/>
+
+            <ImageView
+                android:id="@+id/imageViewCapturedImg2Progress"
+                android:layout_marginTop="1px"
+                android:layout_width="89.5px"
+                android:layout_height="wrap_content"
+                android:src="@drawable/green_circle_bar"/>
+
+            <ImageView
+                android:id="@+id/imageViewCapturedImg3Progress"
+                android:layout_marginTop="1px"
+                android:layout_width="89.5px"
+                android:layout_height="wrap_content"
+                android:src="@drawable/green_circle_bar"/>
+
+            <ImageView
+                android:id="@+id/imageViewCapturedImg4Progress"
+                android:layout_marginTop="1px"
+                android:layout_width="89.5px"
+                android:layout_height="wrap_content"
+                android:src="@drawable/green_circle_bar"/>
+
+            <ImageView
+                android:id="@+id/imageViewCapturedImg5Progress"
+                android:layout_marginTop="1px"
+                android:layout_width="89.5px"
+                android:layout_height="wrap_content"
+                android:src="@drawable/green_circle_bar"/>
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/relativeLayoutProgressBarText"
+            android:layout_width="388px"
+            android:layout_height="29px"
+            android:layout_centerHorizontal="true"
+            android:layout_marginLeft="14px"
+            android:layout_marginTop="16.5px"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textViewCapturedImg1Progress"
+                android:text="1"
+                android:textSize="26px"
+                android:layout_marginLeft="6px"
+                android:textColor="@color/white"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:id="@+id/textViewCapturedImg2Progress"
+                android:text="2"
+                android:textSize="26px"
+                android:layout_marginLeft="76px"
+                android:textColor="@color/white"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:id="@+id/textViewCapturedImg3Progress"
+                android:text="3"
+                android:textSize="26px"
+                android:layout_marginLeft="75px"
+                android:textColor="@color/white"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:id="@+id/textViewCapturedImg4Progress"
+                android:text="4"
+                android:textSize="26px"
+                android:layout_marginLeft="74px"
+                android:textColor="@color/white"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:id="@+id/textViewCapturedImg5Progress"
+                android:text="5"
+                android:textSize="26px"
+                android:layout_marginLeft="74.5px"
+                android:textColor="@color/white"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+
+        </LinearLayout>
+
 
         <TextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/relativeLayoutProgressBar"
             android:layout_centerInParent="true"
+            android:layout_marginTop="22px"
             android:gravity="center"
             android:text="@string/profile"
             android:textColor="@color/white"
-            android:textSize="40px" />
+            android:textSize="40px"/>
 
 
     </RelativeLayout>
-
 
 
     <RelativeLayout
@@ -35,40 +144,100 @@
 
         <SurfaceView
             android:id="@+id/surfaceView"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent" />
+            android:layout_width="match_parent"
+            android:layout_height="845px"/>
 
-        <Button
-            android:id="@+id/captureImage"
+        <LinearLayout
+            android:id="@+id/linearLayoutCapturedImageThumbnails"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:gravity="center_vertical"
-            android:layout_marginBottom="@dimen/activity_vertical_margin"
-            android:background="@drawable/click_picture" />
+            android:layout_marginTop="750px"
+            android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/flash"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="@dimen/activity_vertical_margin"
-            android:layout_marginRight="25dp"
-            android:layout_toLeftOf="@id/captureImage"
-            android:visibility="gone"
-            android:background="@drawable/cross_30_px" />
 
-        <Button
-            android:id="@+id/flipCamera"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:visibility="gone"
-            android:layout_marginBottom="@dimen/activity_vertical_margin"
-            android:layout_marginLeft="25dp"
-            android:layout_toRightOf="@id/captureImage"
-            android:background="@drawable/tick_30_px" />
+            <ImageView
+                android:id="@+id/imageViewCapturedImg1"
+                android:layout_width="69px"
+                android:layout_height="87px"
+                android:layout_marginLeft="25px"
+                android:background="@drawable/background_white_rounded_bordered"/>
+
+            <ImageView
+                android:id="@+id/imageViewCapturedImg2"
+                android:layout_width="69px"
+                android:layout_height="87px"
+                android:layout_marginLeft="14px"
+                android:background="@drawable/background_white_rounded_bordered"/>
+
+            <ImageView
+                android:id="@+id/imageViewCapturedImg3"
+                android:layout_width="69px"
+                android:layout_height="87px"
+                android:layout_marginLeft="14px"
+                android:background="@drawable/background_white_rounded_bordered"/>
+
+            <ImageView
+                android:id="@+id/imageViewCapturedImg4"
+                android:layout_width="69px"
+                android:layout_height="87px"
+                android:layout_marginLeft="14px"
+                android:background="@drawable/background_white_rounded_bordered"/>
+
+        </LinearLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/surfaceView"
+            android:background="@color/black">
+
+            <Button
+                android:id="@+id/captureImage"
+                android:layout_width="86px"
+                android:layout_height="86px"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:background="@drawable/click_picture"
+                android:visibility="visible"/>
+
+            <RelativeLayout
+                android:id="@+id/relativeLayoutConfirmImage"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone">
+
+            <ImageView
+                android:layout_width="2px"
+                android:layout_height="94px"
+                android:layout_marginLeft="14px"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:background="@color/white"/>
+
+
+            <Button
+                android:id="@+id/rejectImage"
+                android:layout_width="41px"
+                android:layout_height="41px"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="148px"
+                android:background="@drawable/self_audit_cross"
+                android:visibility="visible"/>
+
+            <Button
+                android:id="@+id/acceptImage"
+                android:layout_width="41px"
+                android:layout_height="41px"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="148px"
+                android:background="@drawable/self_audit_tick"
+                android:visibility="visible"/>
+
+            </RelativeLayout>
+
+        </RelativeLayout>
 
     </RelativeLayout>
 
